# CompressAI

./: .buildinfo  .clang-format  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .style.yapf  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NEWS.md  Readme.md  ans.html  cli_usage.html  compressai.html  datasets.html  entropy_models.html  genindex.html  index.html  installation.html  intro.html  latent_codecs.html  layers.html  losses.html  models.html  mypy.ini  objects.inv  ops.html  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  toto.py  transforms.html  (+4 more)
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: pytest.yml  python-package.yml  static-analysis.yml  static-gh-pages.yml
_modules/: compressai.html  index.html
_sources/: ans.rst  compressai.rst.txt  datasets.rst  entropy_models.rst  entropy_models.rst.txt  index.rst.txt  installation.rst  installation.rst.txt  intro.rst  latent_codecs.rst  layers.rst  losses.rst  models.rst  models.rst.txt  ops.rst  ops.rst.txt  transforms.rst  tutorial_installation.rst.txt  tutorial_train.rst.txt  zoo.rst.txt
_sources/tutorials/: tutorial_custom.rst.txt
_static/: pygments.css  pygments_dark.css
_static/styles/: furo.css  furo.css.map
compressai/: __init__.py
compressai/datasets/: __init__.py  cache.py  image.py  ndarray.py  pregenerated.py  rawvideo.py  stack.py  utils.py  video.py  vimeo90k.py
compressai/entropy_models/: __init__.py  entropy_models.py  entropy_models_vbr.py
compressai/latent_codecs/: __init__.py  base.py  channel_groups.py  checkerboard.py  entropy_bottleneck.py  gaussian_conditional.py  hyper.py  hyperprior.py  rasterscan.py
compressai/layers/: __init__.py  basic.py  gdn.py  layers.py
compressai/losses/: __init__.py  rate_distortion.py  utils.py
compressai/models/: __init__.py  base.py  google.py  google_vbr.py  priors.py  sensetime.py  utils.py  vbr.py  waseda.py
compressai/ops/: __init__.py  bound_ops.py  ops.py  parametrizers.py
compressai/optimizers/: __init__.py  net.py  net_aux.py
compressai/registry/: __init__.py  torch.py  torchvision.py  transforms.py
compressai/sadl_codec/: CMakeLists.txt  build_codec.sh  check_kodak.sh  common.h  dataset2latent.py  decoder_float.cpp  decoder_generic.h  decoder_int16.cpp  encoder_float.cpp  encoder_generic.h  encoder_int16.cpp  extract_cdf.cpp  extract_codec.py  extract_quantizers.py  range_coder.cpp  range_coder.h  rdoq.h  readme.md
compressai/transforms/: __init__.py  functional.py  transforms.py
compressai/typing/: __init__.py  torch.py
compressai/video/: bench.py  codecs.py  collect.py  eval_model.py  rawvideo.py
compressai/zoo/: __init__.py  image.py  image_vbr.py  pretrained.py  video.py
debug-notebooks/: Performances tracking.ipynb  debug-flow-issues.ipynb  debug-ssf-issues.ipynb  rawvideo.ipynb  rgbtuplet.ipynb
docker/: Dockerfile  Dockerfile.cpu
docs/: .requirements  Makefile  Readme.md  ans.rst  conf.py  index.rst  layers.rst  models.rst  requirements.txt
docs/source/: ans.rst  cli_usage.rst  conf.py  datasets.rst  generate_cli_help.py  index.rst  installation.rst  intro.rst  latent_codecs.rst  layers.rst  losses.rst  models.rst  ops.rst  transforms.rst  tutorial_installation.rst  tutorial_intro.rst  tutorial_quickstart.rst  tutorial_train.rst  zoo.rst
examples/: CompressAI Inference Demo.ipynb  CompressAI Models Comparison Demo.ipynb  Readme.md  codec.py  run-benchmarks.sh  train.py  train_pointcloud.py  train_video.py
results/: Readme.md
results/clic2020-mobile/: av1.json  bpg_444_x265_ycbcr.json  clic2020_mobile_test_mbt2018.json  compressai-bmshj2018-factorized-ms-ssim.json  compressai-bmshj2018-factorized.json  compressai-bmshj2018-hyperprior-ms-ssim.json  compressai-bmshj2018-hyperprior-mse.json  compressai-bmshj2018-hyperprior.json  compressai-bmshj2018-hyperprior_ms-ssim_cpu.json  compressai-cheng2020-anchor-ms-ssim.json  compressai-cheng2020-anchor-mse.json  compressai-cheng2020-anchor_ms-ssim_cuda.json  compressai-cheng2020-anchor_mse_cpu.json  compressai-cheng2020-attn-ms-ssim.json  compressai-cheng2020-attn-mse.json  compressai-cheng2020-attn_ms-ssim_cuda.json  compressai-mbt2018-mean-ms-ssim.json  compressai-mbt2018-mean-mse.json  compressai-mbt2018-mean.json  compressai-mbt2018-mean_mse_cuda.json  compressai-mbt2018-ms-ssim.json  compressai-mbt2018-mse.json  compressai-mbt2018_mse_cuda.json  hm.json  jpeg.json  jpeg2000.json  vtm.json
results/clic2020-pro/: av1.json  bpg_444_x265_ycbcr.json  hm.json  (+10 more)
tests/: test_bench_codec.py  test_bench_codec_video.py  test_codec.py  test_coder.py  test_datasets.py  test_datasets_video.py  test_entropy_models.py  test_entropy_models_vbr.py  test_eval_model.py  test_eval_model_video.py  test_find_close.py  test_init.py  test_layers.py  test_models.py  test_ops.py  test_plot.py  test_scripting.py  test_train.py  test_transforms.py  test_update_model.py  test_utils.py  test_waseda.py  test_zoo.py
tutorials/: tutorial_custom.html  tutorial_train.html
(+331 files in other folders)
