[build-system]
requires = ['setuptools', 'wheel', 'torch>=1.4.0', 'numpy']

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
		\.eggs
		| \.git
		| \.mypy_cache
		| \venv*
		| _build
		| build
		| dist
)/
'''

[tool.isort]
multi_line_output = 3
lines_between_types = 1
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_third_party = "PIL,pytorch_msssim,torchvision,torch"
skip_gitignore = true

[tool.pylint.messages_control]
disable = "C0330,C0326,bad-continuation,C0103,C0304,W0221,R0902,R0914,C0114,W0511,C0116,W0201,C0415,R0401,R0201,R0913,R0903,R0801"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.typecheck]
ignored-modules = "torch"
extension-pkg-whitelist = "compressai.ans,compressai._cxx,range_coder"

[tool.pytest.ini_options]
markers = [
    "pretrained: download and check pretrained models (slow, deselect with '-m \"not pretrained\"')",
    "slow: all slow tests (pretrained models, train, etc...)",
]
