[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0", "torch"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
		\.eggs
		| \.git
		| \.mypy_cache
		| venv*
		| _build
		| build
		| dist
)/
'''

[tool.isort]
multi_line_output = 3
lines_between_types = 1
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_third_party = "PIL,pytorch_msssim,torchvision,torch"
skip_gitignore = true

[tool.pytest.ini_options]
markers = [
    "pretrained: download and check pretrained models (slow, deselect with '-m \"not pretrained\"')",
    "slow: all slow tests (pretrained models, train, etc...)",
]
